force-app/main/default/objects/Takeoff_Task__c/Takeoff_Task__c.object-meta.xml
<CustomObject>
    <description>Task records tied to a Takeoff. Includes 811 utility locate, field measurements, photo capture, scope verification, and access notes. Required tasks block CS Approval until complete.</description>
    <label>Takeoff Task</label>
    <nameField>
        <displayFormat>TT-{0000}</displayFormat>
        <label>Takeoff Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Takeoff Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>