force-app/main/default/objects/Takeoff_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Takeoff Tasks</relationshipLabel>
    <relationshipName>Assigned_Takeoff_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>