force-app/main/default/objects/Takeoff_Task__c/fields/Eight11_Status__c.field-meta.xml
<CustomField>
    <fullName>Eight11_Status__c</fullName>
    <description>811 utility locate status. Only applicable when Task_Type__c = 811 Call. Gate: Work Order cannot be created unless this value is Cleared or Not Needed.</description>
    <label>811 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Filed</fullName>
                <default>true</default>
                <label>Not Filed</label>
            </value>
            <value>
                <fullName>Filed</fullName>
            </value>
            <value>
                <fullName>Pending Locate</fullName>
            </value>
            <value>
                <fullName>Marked</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>