force-app/main/default/objects/Takeoff_Task__c/fields/Locate_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Locate_Confirmation_Number__c</fullName>
    <description>811 utility locate confirmation number. Required when Eight11_Status__c reaches Filed or Cleared. Used for audit and dispute resolution.</description>
    <label>Locate Confirmation Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>