force-app/main/default/objects/Takeoff_Task__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, this task must be Completed or Not Needed before the Takeoff can be CS Approved.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>