force-app/main/default/objects/Takeoff_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>811 Call</fullName>
            </value>
            <value>
                <fullName>Field Measurement</fullName>
            </value>
            <value>
                <fullName>Photo Capture</fullName>
            </value>
            <value>
                <fullName>Scope Verification</fullName>
            </value>
            <value>
                <fullName>Access / Site Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>