force-app/main/default/objects/Takeoff_Task__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to the Work Order created from this Takeoff. Populated by LOVING_Takeoff_Approved flow after WO creation.</description>
    <label>Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Takeoff Tasks</relationshipLabel>
    <relationshipName>Takeoff_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>